--- a/bootstrap-cdn.html
+++ b/bootstrap-cdn.html
@@ -25,7 +25,7 @@
 <!-- footer start -->
 <="text-center text-secfooter classondary">
 	<small>
-		copyright &copy;2022 -Designed by<span class="fw-bold">Jansen</span>
+		copyright &copy;2022 -Designed by<span class="fw-bold">reinold</span>
 	</small>
 </footer>
 <!-- footer end -->
